--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-parallax-tilt": "^1.7.316",
     "react-router-dom": "^7.12.0",
-    "react-to-print": "^3.2.0"
+    "react-to-print": "^3.2.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
