--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.13.2",
+    "axios": "^1.13.4",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
@@ -25,6 +25,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.11",
     "pdf-parse": "^2.4.5",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "vm2": "^3.10.3"
   }
 }
